password encriptado con MD5

--- a/EDD_Proyecto2/nbproject/project.properties
+++ b/EDD_Proyecto2/nbproject/project.properties
@@ -29,13 +29,21 @@ dist.jar=${dist.dir}/EDD_Proyecto2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.6-javadoc.jar=MD5/lib/commons-codec-1.6-javadoc.jar
+file.reference.commons-codec-1.6-sources.jar=MD5/lib/commons-codec-1.6-sources.jar
+file.reference.commons-codec-1.6-tests.jar=MD5/lib/commons-codec-1.6-tests.jar
+file.reference.commons-codec-1.6.jar=MD5/lib/commons-codec-1.6.jar
 file.reference.json-simple-1.1.1.jar=libreria json\\json-simple-1.1.1.jar
 file.reference.json-simple-1.1.1.jar.zip=libreria json/json-simple-1.1.1.jar.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.json-simple-1.1.1.jar.zip}
+    ${file.reference.json-simple-1.1.1.jar.zip}:\
+    ${file.reference.commons-codec-1.6-javadoc.jar}:\
+    ${file.reference.commons-codec-1.6-sources.jar}:\
+    ${file.reference.commons-codec-1.6-tests.jar}:\
+    ${file.reference.commons-codec-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
